tests/cases/modules/ok/diamond_project/left.ari
pub fn value() -> i64 {
  return super::shared::base() + 4;
}
