tests/cases/modules/errors/module-super-root.ari
use super::value

fn main() -> i64 {
  return 0;
}
